hphp/hack/test/sound_dynamic/typing/pessimise_builtins/map_key.bad.php.exp
File "map_key.bad.php", line 6, characters 3-9:
Invalid index type for this Map (Typing[4324])
  File "", line 0, characters 0-0:
  Expected `int`
  File "map_key.bad.php", line 3, characters 28-32:
  But got `float`
File "map_key.bad.php", line 7, characters 3-9:
Invalid index type for this Map (Typing[4324])
  File "", line 0, characters 0-0:
  Expected `int`
  File "map_key.bad.php", line 3, characters 46-51:
  But got `string`
File "map_key.bad.php", line 8, characters 3-13:
Invalid index type for this Map (Typing[4324])
  File "", line 0, characters 0-0:
  Expected `~int`
  File "map_key.bad.php", line 3, characters 28-32:
  But got `float`
File "map_key.bad.php", line 8, characters 3-13:
This value is not a valid key type for this container (Typing[4371])
  File "map_key.bad.php", line 3, characters 60-72:
  This container is an object of type Map<int, int>
  File "map_key.bad.php", line 3, characters 27-32:
  A dynamic value or a float cannot be used as a key for an object of type Map<int, int>
File "map_key.bad.php", line 9, characters 3-13:
Invalid index type for this Map (Typing[4324])
  File "", line 0, characters 0-0:
  Expected `~int`
  File "map_key.bad.php", line 3, characters 46-51:
  But got `string`
File "map_key.bad.php", line 10, characters 3-16:
Invalid index type for this Map (Typing[4110])
  File "map_key.bad.php", line 10, characters 8-10:
  Expected `arraykey` because only array keys can be used to index into a `Map`, `dict`, `darray`, `Set`, or `keyset`
  File "map_key.bad.php", line 3, characters 28-32:
  But got `float`
File "map_key.bad.php", line 10, characters 3-16:
The keys of this Map are incompatible (Typing[4110])
  File "", line 0, characters 0-0:
  Expected `~[unresolved]`
  File "map_key.bad.php", line 3, characters 28-32:
  But got `float`
